--- a/package.json
+++ b/package.json
@@ -151,5 +151,9 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "less": "^3.12.2",
+    "less-loader": "^7.0.2"
   }
 }
