--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,15 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "react",
+    "baseUrl": "./",
+    "paths": {
+      "@": [ "src/"],
+      "Assets": [ "src/assets"],
+      "Components": [ "src/components"],
+      "Views": [ "src/views"],
+      "Routes": [ "src/routes"],
+    }
   },
   "include": [
     "src"
