--- a/.env.production
+++ b/.env.production
@@ -4,3 +4,4 @@ REACT_APP_BASE_API = '/api/v1'
 REACT_APP_ACCESS_TOKEN=pherusa_access_token
 REACT_APP_WEBSITE_NAME=合作伙伴专区
 REACT_APP_VERSION=$npm_package_version
+GENERATE_SOURCEMAP=false
