--- a/package.json
+++ b/package.json
@@ -44,6 +44,10 @@
     "fs-extra": "^9.0.1",
     "html-webpack-plugin": "4.5.0",
     "http-proxy-middleware": "^1.0.6",
+    "i": "^0.3.6",
+    "i18next": "^19.8.3",
+    "i18next-browser-languagedetector": "^6.0.1",
+    "i18next-http-backend": "^1.0.21",
     "identity-obj-proxy": "3.0.0",
     "jest": "26.6.0",
     "jest-circus": "26.6.0",
@@ -52,6 +56,7 @@
     "lodash": "^4.17.20",
     "mini-css-extract-plugin": "0.11.3",
     "moment": "^2.29.1",
+    "npm": "^6.14.8",
     "optimize-css-assets-webpack-plugin": "5.0.4",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.2.1",
@@ -64,6 +69,7 @@
     "react-dev-utils": "^11.0.0",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-i18next": "^11.7.3",
     "react-refresh": "^0.8.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
