--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,17 +22,17 @@
     "baseUrl": "./",
     "paths": {
       "@": [ "src/"],
-      "Assets": [ "src/assets"],
-      "Components": [ "src/components"],
-      "Views": [ "src/views"],
-      "Routes": [ "src/routes"],
-      "Utils": ["src/utils"],
-      "Apis": ["src/apis"],
-      "Constants": ["src/constants"],
-      "I18n": ["src/i18n"],
-      "Layouts": ["src/layouts"],
-      "Stores": ["src/stores"],
-      "Styles": ["src/styles"]
+      "@assets": [ "src/assets"],
+      "@components": [ "src/components"],
+      "@views": [ "src/views"],
+      "@routes": [ "src/routes"],
+      "@utils": ["src/utils"],
+      "@apis": ["src/apis"],
+      "@constants": ["src/constants"],
+      "@i18n": ["src/i18n"],
+      "@layouts": ["src/layouts"],
+      "@stores": ["src/stores"],
+      "@styles": ["src/styles"]
     }
   },
   "include": [
