--- a/package.json
+++ b/package.json
@@ -69,9 +69,12 @@
         "react-dom": "^17.0.1",
         "react-helmet": "^6.1.0",
         "react-i18next": "^11.7.3",
+        "react-redux": "^7.2.2",
         "react-refresh": "^0.8.3",
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
+        "redux": "^4.0.5",
+        "redux-thunk": "^2.3.0",
         "resolve": "1.18.1",
         "resolve-url-loader": "^3.1.2",
         "sass-loader": "8.0.2",
@@ -174,6 +177,9 @@
     "devDependencies": {
         "@commitlint/cli": "^11.0.0",
         "@commitlint/config-conventional": "^11.0.0",
+        "@types/react-redux": "^7.1.11",
+        "@types/redux": "^3.6.0",
+        "@types/redux-thunk": "^2.1.0",
         "eslint-config-prettier": "^6.15.0",
         "eslint-plugin-prettier": "^3.1.4",
         "eslint-plugin-react": "^7.21.5",
