--- a/package.json
+++ b/package.json
@@ -149,7 +149,19 @@
         "modulePaths": [],
         "moduleNameMapper": {
             "^react-native$": "react-native-web",
-            "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
+            "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy",
+            "@routes(.*)$": "<rootDir>/src/routes/$1",
+
+            "@assets(.*)$": "<rootDir>/src/assets/$1",
+            "@components(.*)$": "<rootDir>/src/components/$1",
+            "@views(.*)$": "<rootDir>/src/views/$1",
+            "@utils(.*)$": "<rootDir>/src/utils/$1",
+            "@apis(.*)$": "<rootDir>/src/apis/$1",
+            "@constants(.*)$": "<rootDir>/src/constants/$1",
+            "@i18n(.*)$": "<rootDir>/src/i18n/$1",
+            "@layouts(.*)$": "<rootDir>/src/layouts/$1",
+            "@stores(.*)$": "<rootDir>/src/stores/$1",
+            "@styles(.*)$": "<rootDir>/src/styles/$1"
         },
         "moduleFileExtensions": [
             "web.js",
